--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     	<div class="col-md-6 section_1_1">
                         	<p>Let us assist you with your book project.<br />
 
-                               Let's help you go from your manuscript to a
+                               Lets's help you go from your manuscript to a
                                professionally published book, and to a 
                                possible great seller.<br />
                                Our book self-publishing service enables you,
