--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <img src="images/112.png"/>
             </div>
              <div class="col-md-10">
-                <h1>SUNIL(BURNING STAR)</h1>
+                <h1>RD SUNIL(BURNING STAR)</h1>
                  <p>AgoraPublishing.com can help teachers produce high 
                 quality designed books with the same quality of a
                 multi-million and billion dollar corporate trade publisher. 
