--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <img src="images/920.png"/>
             </div>
                 <div class="col-md-10">
-                <h1>Pawan Kalyan Life Story</h1>
+                <h1>Pawer StarPawan Kalyan Life Story</h1>
                  <p>AgoraPublishing.com can help teachers produce high 
                 quality designed books with the same quality of a
                 multi-million and billion dollar corporate trade publisher. 
