--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">HOME<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">PAWANKALYAN</a></li>
+        <li><a href="#">Pawer Tiger PAWANKALYAN</a></li>
         <li><a href="#">MAHESHBABU</a></li>
         <li><a href="#">NTR</a></li>
         <li><a href="#">PRABASH</a></li>
