--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Anand Book Stall for Users and Online Store</title>
+    <title>hi Anand and Prakash Book Stall for Users and Online Store</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -115,7 +115,7 @@
             <img src="images/0012.png"/>
             </div>
             <div class="col-md-10">
-                <h1>Mahesh Babu Life Story</h1>
+                <h1>MS Mahesh Babu Life Story</h1>
                  <p>AgoraPublishing.com can help teachers produce high 
                 quality designed books with the same quality of a
                 multi-million and billion dollar corporate trade publisher. 
