Tile is changed

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<<<<<<< HEAD
+
     <title>IIfi Anand and Prakash Book Stall for Users and Online Store</title>
-=======
-    <title>If R Anand Book Stall for Users and Online Store</title>
->>>>>>> 2c6e743814cbfcb7eac82ef07558634d50a05e36
+
+    <title>Name of the company is changed to Anand Works</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
