pawan name changed to kalyan

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             </div>
         <div class="col-md-12 section_1">
-            	<h1>Hero's Life Stories </h1>
+            	<h1>Tolly wood Hero's Life Stories </h1>
                 	<div class="container row-padding">
                     	<div class="col-md-6 section_1_1">
                         	<p>Let us assist you with your book project.<br />
@@ -103,7 +103,7 @@
             <img src="images/920.png"/>
             </div>
                 <div class="col-md-10">
-                <h1>Pawer StarPawan Kalyan Life Story</h1>
+                <h1>Kalyan Life Story</h1>
                  <p>AgoraPublishing.com can help teachers produce high 
                 quality designed books with the same quality of a
                 multi-million and billion dollar corporate trade publisher. 
