--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             </div>
         <div class="col-md-12 section_1">
-            	<h1>My 123 Tolly wood Hero's Life Stories </h1>
+            	<h1>Books About Tolly wood Hero's Life Stories </h1>
                 	<div class="container row-padding">
                     	<div class="col-md-6 section_1_1">
                         	<p>Let us assist you with your book project.<br />
