--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>IIfi Anand and Prakash Book Stall for Users and Online Store</title>
+    <title>DDDDDDDIIfi Anand and Prakash Book Stall for Users and Online Store</title>
 
     <title>Name of the company is changed to Anand Works</title>
 
